[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gensim>=4.3.3",
    "gradio>=5.23.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "langchain[docarray]>=0.3.22",
    "langchain-chroma>=0.2.2",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.11",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "datasets>=3.5.0",
    "sentencepiece>=0.2.0",
    "google-generativeai>=0.8.4",
    "anthropic>=0.49.0",
    "unstructured>=0.17.2",
    "chromadb>=0.6.3",
    "plotly>=6.0.1",
    "jupyter-dash>=0.4.2",
    "beautifulsoup4>=4.13.3",
    "pydub>=0.25.1",
    "modal>=0.73.136",
    "ollama>=0.4.7",
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.4",
    "psutil>=7.0.0",
    "setuptools>=78.1.0",
    "speedtest-cli>=2.1.3",
    "sentence-transformers>=4.0.1",
    "feedparser>=6.0.11",
]
